<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_location_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_location_name"
            android:textSize="32dp"/>
        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_location_hint"
            android:textColorHint="#FF0000"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/action_location_button"
                android:layout_weight="1"
                android:id="@+id/button_send_location" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/action_clear_button"
                android:layout_weight="1"
                android:id="@+id/button_clear" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
